# stm32h7xx-playground

./: Cargo.toml  README.md  STM32H7XX_W25Q128.yaml  memory.x
.cargo/: config.toml
src/: lib.rs
