[package]
name = "stm32h7xx-playground"
version = "0.1.0"
edition = "2021"


[dependencies]
# Change stm32h743bi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [
    "defmt",
    "stm32h750vb",
    "time-driver-tim2",
    "exti",
    # Use memory.x from top directory
    # "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.6.0", path = "../embassy/embassy-executor", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.4.0", path = "../embassy/embassy-net", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv6",
    "dns",
] }
embassy-usb = { version = "0.3.0", path = "../embassy/embassy-usb", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
# embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
assign-resources = "0.4.1"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
